--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@ Durante <b>sus últimos años de vida se le apodó el «Canciller de Hierro» </
 Estudió Derecho y, a partir de 1835, trabajó en los tribunales de Berlín y Aquisgrán, actividad que abandonó tres años más tarde para dedicarse al cuidado de sus posesiones territoriales.2​
 \n \n
 En 1847 entró a formar parte del parlamento prusiano,2​ donde muy pronto se convirtió en líder del ala conservadora.2​ Se enfrentó duramente a la revolución de 1848 y por esa época comenzó a perfilar lo que sería su principal objetivo político: la unificación de Alemania y la creación del Reich desde preceptos autoritarios y antiparlamentarios</string>
+    <string name="whats_your_nickname">cual es tu nombre?</string>
+    <string name="Don">Done</string>
 </resources>
